# androidtest

AudioVideo/app/: build.gradle
AudioVideo/app/src/main/: AndroidManifest.xml
AudioVideo/app/src/main/java/com/wuwang/jni/: DataConvert.java
AudioVideo/app/src/main/java/edu/wuwang/codec/camera/: CameraActivity.java
AudioVideo/app/src/main/res/layout/: activity_camera.xml
AudioVideo/gradle/wrapper/: gradle-wrapper.properties
HookDemo/app/: build.gradle
HookDemo/app/src/main/: AndroidManifest.xml
HookDemo/app/src/main/java/com/android/hook/: HookCore.java  HookListenerContract.java  ListenerManager.java  MainActivity.java  OnClickListenerProxy.java
HookDemo/app/src/main/res/layout/: activity_main.xml
HookDemo/gradle/wrapper/: gradle-wrapper.properties
MediaCodecDemo/: build.gradle
MediaCodecDemo/app/: build.gradle
MediaCodecDemo/app/src/main/: AndroidManifest.xml
MediaCodecDemo/app/src/main/java/org/m4m/domain/: AudioEffector.java
MediaCodecDemo/app/src/main/java/org/m4m/samples/: CameraCapturerActivity.java  ComposerVideoEffectCoreActivity.java
MediaCodecDemo/app/src/main/res/layout/: main.xml
MediaCodecDemo/app/src/main/res/values/: strings.xml
MediaCodecDemo/gradle/wrapper/: gradle-wrapper.properties
NE10Demo/app/: CMakeLists.txt  build.gradle
NE10Demo/app/src/main/: AndroidManifest.xml
NE10Demo/app/src/main/cpp/: NE10_test_demo.cpp
NE10Demo/app/src/main/java/com/ne10/demo/: MainActivity.java
NE10Demo/app/src/main/res/layout/: activity_main.xml
NE10Demo/app/src/main/res/values/: strings.xml
NE10Demo/gradle/wrapper/: gradle-wrapper.properties
android-serialport-api/: README.md
android_media/AudioCamera/app/: build.gradle
android_media/AudioCamera/app/src/main/: AndroidManifest.xml
android_media/AudioCamera/app/src/main/res/layout/: activity_main.xml
android_media/AudioCamera/app/src/main/res/values/: strings.xml
android_media/AudioCamera/gradle/wrapper/: gradle-wrapper.properties
ndkdemo/app/: build.gradle
ndkdemo/app/src/main/: AndroidManifest.xml
ndkdemo/app/src/main/cpp/: native-lib.cpp
ndkdemo/app/src/main/java/com/android/ndkdemo/: MainActivity.java  NativeUtils.java
ndkdemo/app/src/main/res/layout/: activity_main.xml
ndkdemo/gradle/wrapper/: gradle-wrapper.properties
waveView-master/: README.md  WaveView.java
(+17 files in other folders)
